    arguments.
  * Add patches/ia64/submitted-memchr.diff to fix memchr() overshoot on ia64.
    Closes: #563882
  * Add patches/any/submitted-leading-zero-stack-guard.diff and 
    patches/any/submitted-stack-guard-quick-randomization.diff from Ubuntu and
    Fedora to improve stack randomisation.  Closes: #568488.
  * Update es_CR locale from Marcelo Magallon.  Closes: #567351.

  [ Samuel Thibault ]
  * patches/hurd-i386/local-pthread.diff: New hurd-only patch to provide
    LIBPTHREAD_SO and disable nscd.
  * patches/hurd-i386/local-pthread_posix-option.diff: Tell glibc Makefiles that
    we have a libpthread.
  * testsuite-checking/expected-results-i486-linux-gnu-libc: Update results.
  * patches/hurd-i386/submitted-posix_opt.h.diff: Update.
  * patches/hurd-i386/submitted-sysvshm.diff: Resync.
  * patches/hurd-i386/submitted-net.diff: New patch to factorize net/ files
    between Linux and Hurd.
  * patches/hurd-i386/submitted-getnprocs.diff: New patch to add get_nprocs()
    and such weak aliases.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 07 Feb 2010 15:34:43 +0100

eglibc (2.10.2-5) unstable; urgency=low

  [ Petr Salinger]
  * Update kfreebsd/local-no-SOCK_NONBLOCK.diff to cvs-resolv-* changes.
    Move it into any/local-no-SOCK_NONBLOCK.diff, as it is used also on hurd.
    Closes: #564008.

  [ Samuel Thibault ]
  * patches/hurd-i386/submitted-posix_opt.h.diff: New patch to update standard
    macros in posix_opt.h.
  * patches/hurd-i386/local-pthread_posix-option.diff: Refresh and update
    standard macros in posix_opt.h.
  * patches/hurd-i386/submitted-sysvshm.diff: Add standard macro _XOPEN_SHM in
    posix_opt.h.
  * patches/hurd-i386/local-tls-support.diff: Use kern_return_t instead of
    error_t to avoid a dependency on a GNU-specific type.
  * patches/hurd-i386/submitted-getcwd.diff: renamed to cvs-getcwd.diff since
    merged upstream.
  * patches/hurd-i386/submitted-setsid.diff: renamed to cvs-setsid.diff since
    merged upstream.
