@@ -16,6 +16,8 @@ eglibc (2.10.2-6) UNRELEASED; urgency=low
     patches/any/submitted-stack-guard-quick-randomization.diff from Ubuntu and
     Fedora to improve stack randomisation.  Closes: #568488.
   * Update es_CR locale from Marcelo Magallon.  Closes: #567351.
+  * debian/script.in/nsscheck.sh: Only restart services that are currently 
+    running.  Closes: #528755.
 
   [ Samuel Thibault ]
   * patches/hurd-i386/local-pthread.diff: New hurd-only patch to provide
@@ -30,7 +32,7 @@ eglibc (2.10.2-6) UNRELEASED; urgency=low
   * patches/hurd-i386/submitted-getnprocs.diff: New patch to add get_nprocs()
     and such weak aliases.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 07 Feb 2010 15:34:43 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Sun, 07 Feb 2010 16:08:26 +0100
 
 eglibc (2.10.2-5) unstable; urgency=low
 
